# advent-of-code

./: .gitignore  README.md  base.py  config.sh  main.py  new-day.py  path.sh  pyproject.toml
01/: README.md  a.py  b.py
2015/01/: README.md  a.py  b.py
2015/02/: README.md  a.py  b.py
2019/01/: README.md  a.py  b.py
2019/02/: README.md  a.py  b.py
2022/01/: README.md  a.py  b.py
2022/02/: README.md  a.py  b.py  og.py
2022/02/2019/: test_2019_01.py
2022/03/: README.md  a.py  b.py
2022/04/: README.md  a.py  b.py
2022/05/: README.md  a.py  b.py  og.py
2022/06/: README.md  a.py  b.py
2022/07/: README.md  a.py  b.py
src/: aoc.py  grid.py  infra.py  injection.py  models.py  utils.py
src/year2015/day01/: README.md  a.py  b.py
src/year2015/day02/: a.py  b.py
src/year2015/day03/: README.md  a.py  b.py
src/year2019/day01/: README.md  a.py  b.py
src/year2019/day02/: a.py  b.py
src/year2022/day01/: README.md  a.py  b.py
src/year2022/day02/: a.py  b.py  og.py
src/year2022/day03/: a.py  b.py
templates/: base.py  test.py
tests/: test_grid.py  test_infra.py
tests/2015/: test_2015_01.py  test_2015_02.py  test_2015_03.py
tests/2019/: test_2019_01.py  test_2019_02.py
tests/2022/: test_2022_01.py  test_2022_02.py  test_2022_03.py  test_2022_04.py  test_2022_05.py  test_2022_06.py  test_2022_07.py  test_2022_08.py  test_2022_09.py  test_2022_10.py  test_2022_11.py  test_2022_12.py  test_2022_13.py  test_2022_14.py  test_2022_15.py  test_2022_16.py  test_2022_18.py  test_2022_21.py
tools/: aoc.py  injection.py  md.py  utils.py
(+50 files in other folders)
